# keepsake

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/keepsake-app/: README.md
crates/keepsake-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/keepsake-app/src-tauri/capabilities/: default.json
crates/keepsake-app/src-tauri/icons/: icon.icns
crates/keepsake-app/src-tauri/src/: auto_sync.rs  lib.rs  main.rs  session.rs
crates/keepsake-app/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/keepsake-app/ui/src/: App.tsx  api.ts  columns.ts  insights.ts  links.ts  main.tsx  markdown.ts  schemas.ts  state.ts  styles.css
crates/keepsake-app/ui/src/components/: Markdown.tsx  Toast.tsx
crates/keepsake-app/ui/src/pages/: About.tsx  Audit.tsx  Category.tsx  Dashboard.tsx  Insights.tsx  RecordDetail.tsx  RecordForm.tsx  Settings.tsx  Sync.tsx
crates/keepsake-cli/: Cargo.toml
crates/keepsake-cli/src/: cli.rs  dev_server.rs  main.rs
crates/keepsake-cli/src/commands/: add.rs  add_user.rs  audit.rs  audit_reset.rs  change_password.rs  default_path.rs  delete.rs  edit.rs  export.rs  find.rs  import.rs  init.rs  links.rs  list.rs  list_users.rs  lock.rs  mod.rs  remove_user.rs  repl.rs  resolve.rs  show.rs  status.rs  sync.rs  unlock.rs  whoami.rs
crates/keepsake-core/: Cargo.toml
crates/keepsake-core/src/: config.rs  error.rs  lib.rs  session.rs
crates/keepsake-core/src/audit/: mod.rs
crates/keepsake-core/src/crdt/: mod.rs
crates/keepsake-core/src/crypto/: aead.rs  hkdf.rs  kdf.rs  mod.rs  sign.rs  zeroize.rs
crates/keepsake-core/src/doc/: mod.rs
crates/keepsake-core/src/export/: mod.rs
crates/keepsake-core/src/identity/: envelope_key.rs  mod.rs  password.rs  vault_key.rs
crates/keepsake-core/src/links/: mod.rs
crates/keepsake-core/src/records/: account.rs  contact.rs  document.rs  finance.rs  health.rs  identification.rs  infrastructure.rs  insurance.rs  mod.rs  note.rs  property.rs  runbook.rs  subscription.rs  validate.rs  work_log.rs
crates/keepsake-core/src/server_admin/: mod.rs
crates/keepsake-core/src/sync/: change.rs  client.rs  engine.rs  mod.rs  protocol.rs  update.rs
crates/keepsake-core/src/transport/: envelope_auth.rs  http.rs  mod.rs
crates/keepsake-core/src/vault/: mod.rs
crates/keepsake-server/: Cargo.toml
crates/keepsake-server/src/: api.rs  lib.rs  main.rs  storage.rs
crates/keepsake-server/tests/: server.rs
docs/: crypto.md  deploy-sync-server.md  sync-protocol.md  threat-model.md
scripts/: make-icons.py
