[workspace]
resolver = "2"
members = [
    "crates/keepsake-core",
    "crates/keepsake-cli",
    "crates/keepsake-server",
    "crates/keepsake-app/src-tauri",
]

[workspace.package]
edition      = "2021"
rust-version = "1.91"
license      = "MIT"
version      = "0.1.0"
authors      = ["Justin Woodring"]
repository   = "https://github.com/JustinWoodring/keepsake"

[workspace.dependencies]
# storage
rusqlite         = { version = "0.32", features = ["bundled"] }

# crypto
argon2           = "0.5"
chacha20poly1305 = "0.10"
ed25519-dalek    = { version = "2", features = ["rand_core"] }
hkdf             = "0.12"
sha2             = "0.10"
blake3           = "1.5"
rand             = "0.8"
rand_core        = "0.6"
zeroize          = { version = "1.8", features = ["zeroize_derive"] }
getrandom        = "0.2"

# serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"

# errors
thiserror = "1"
anyhow    = "1"

# time / ids
chrono = { version = "0.4", features = ["serde"] }
uuid   = { version = "1", features = ["v4", "serde"] }

# async
tokio    = { version = "1", features = ["full"] }
reqwest  = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rustls   = "0.23"

# CLI
clap        = { version = "4", features = ["derive"] }
ratatui     = "0.29"
crossterm   = "0.28"
dialoguer   = "0.11"
rpassword   = "7"
comfy-table = "7"

# server (axum)
axum = "0.7"

# small utility
dirs = "5"
parking_lot = "0.12"

# tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-fs = "2"

# crdt
yrs = "0.25"

# tests
proptest  = "1"
criterion = "0.5"

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = "symbols"
