[package]
name        = "keepsake-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "End-to-end-encrypted life organizer library: vault, crypto, records, CRDT sync."

[dependencies]
# storage
rusqlite = { workspace = true }

# crypto
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# time / ids
chrono = { workspace = true }
uuid = { workspace = true }

# async (transport)
tokio = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
async-trait = "0.1"
hex = "0.4"

# small utility
dirs = { workspace = true }
parking_lot = { workspace = true }

# crdt
yrs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
