[package]
name        = "keepsake-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Standalone keepsake sync server."

[lib]
name = "keepsake_server"
path = "src/lib.rs"

[[bin]]
name = "keepsake-server"
path = "src/main.rs"

[dependencies]
keepsake-core = { path = "../keepsake-core" }

axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
hex = "0.4"
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
